# quebracho

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INFORME-MANTENIMIENTO-2026-07-11.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  prompt-logo.md  tailwind.config.js  tsconfig.json  vite.config.ts
.atl/: .skill-registry.cache.json  skill-registry.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-tauri.yml
app/: App.tsx  confirm.ts  index.css  main.tsx  store.ts  tauri-bridge.ts  types.ts  vite-env.d.ts
app/ai/: protocol.ts  runtime.ts  streamRouter.ts
app/components/: ActivityBar.tsx  BottomPanel.tsx  CommandPalette.tsx  DatabasePanel.tsx  DbQueryEditor.tsx  EditorArea.tsx  FindReplaceOverlay.tsx  ImageViewer.tsx  SearchPanel.tsx  SettingsModal.tsx  SideBar.tsx  StatusBar.tsx  TitleBar.tsx
app/components/AIPanel/: AIPanel.tsx  ApiKeyModal.tsx  ChatMessages.tsx  DiffView.tsx  InputArea.tsx
app/i18n/: index.ts
app/lsp/: client.ts
app/theme/: appearance.ts  fileIcons.tsx
docs/contributing/: agentic-workflow.md
docs/theming/: README.md
docs/updater/: README.md  latest.json  latest.template.json
openspec/: artifact-refs.yaml  config.yaml
scripts/: create-latest-template.mjs  validate-release-metadata.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  ai.rs  app.rs  database.rs  fs.rs  live_server.rs  lsp.rs  mod.rs  search.rs  settings.rs  terminal.rs
src-tauri/src/models/: mod.rs  provider.rs
src-tauri/src/providers/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai_compatible.rs  openrouter.rs  registry.rs
src-tauri/src/state/: mod.rs
src-tauri/src/storage/: keyring.rs  migration.rs  mod.rs  secrets.rs
src-tauri/src/utils/: mod.rs
