[package]
name = "quebracho"
version = "0.0.1-alpha3"
description = "Quebracho desktop app by Yacare Studio"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "quebracho_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
notify = "6"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tiny_http = "0.12"
mime_guess = "2"
walkdir = "2"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
bytes = "1"
thiserror = "1"
async-trait = "0.1"
keyring = "2"
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
