[package]
name = "quebracho"
version = "0.0.2"
description = "Quebracho desktop app by Yacare Studio"
authors = ["mulator <campogabriel@gmail.com>"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "quebracho_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2.10.1"
notify = "8"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
tiny_http = "0.12"
mime_guess = "2"
walkdir = "2"
regex = "1"
once_cell = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "stream"] }
bytes = "1"
thiserror = "2"
async-trait = "0.1"
keyring = "4"
keyring-core = "1"
futures = "0.3"
tauri-plugin-clipboard-manager = "2"
urlencoding = "2"
sqlx = { version = "0.9", features = ["runtime-tokio", "any", "mysql", "postgres", "sqlite", "chrono", "rust_decimal", "uuid", "json"] }
tiberius = { version = "0.12.3", features = ["tokio", "tds73"] }
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7.18", features = ["compat"] }

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
